--- a/.github/workflows/main_fittrack-app.yml
+++ b/.github/workflows/main_fittrack-app.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
       - name: npm install, build, and test
         run: |
@@ -38,28 +38,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B84536101B054044BCD0B8569C3257A8 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_029A64F7F5594E51AC351E691645B511 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2B3A585C05574A968A37808B632DCFC2 }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'fittrack-app'
-          slot-name: 'Production'
+          app-name: "fittrack-app"
+          slot-name: "Production"
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: .
-          
