Use next standalone build for azure

--- a/.github/workflows/main_fittrack-app.yml
+++ b/.github/workflows/main_fittrack-app.yml
@@ -28,19 +28,17 @@ jobs:
           npm ci
           npm run build
 
+      - name: Copy standalone output
+        run: |
+          cp -r .next/standalone ./deploy
+          cp -r .next/static ./deploy/.next/static
+          cp -r public ./deploy/public
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: |
-            .next/
-            node_modules/
-            public/
-            src/
-            package.json
-            package-lock.json
-            next.config.ts
-            tsconfig.json
+          path: ./deploy
 
   deploy:
     runs-on: ubuntu-latest
