--- a/.github/workflows/main_fittrack-app.yml
+++ b/.github/workflows/main_fittrack-app.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - fittrack-app-hm
 
 on:
@@ -12,46 +9,43 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
 
-      - name: npm install and build
+      - name: Install and build
         run: |
           npm ci
           npm run build
 
-      - name: Copy standalone output
-        run: |
-          cp -r .next/standalone/. ./deploy
-          mkdir -p deploy/.next
-          cp -r .next/static deploy/.next/static
-          cp -r public deploy/public
+      - name: Zip artifact for deployment
+        run: zip -r release.zip .next node_modules package.json package-lock.json next.config.ts public
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: ./deploy
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: "Deploy to Azure Web App"
+      - name: Unzip artifact
+        run: unzip release.zip
+
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: "fittrack-app-hm"
