--- a/.github/workflows/main_fittrack-app.yml
+++ b/.github/workflows/main_fittrack-app.yml
@@ -23,8 +23,8 @@ jobs:
           npm ci
           npm run build
 
-      - name: Zip artifact for deployment
-        run: zip -r release.zip .next node_modules package.json package-lock.json next.config.ts public
+      - name: Zip all files for deployment
+        run: zip -r release.zip . -x "*.git*" -x "*node_modules/.cache/*"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
