--- a/.github/workflows/main_fittrack-app.yml
+++ b/.github/workflows/main_fittrack-app.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Node.js app to Azure Web App - fittrack-app-hm
+name: Build and deploy Next.js app to Azure Web App - fittrack-app-hm
 
 on:
   push:
@@ -11,20 +11,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
+          cache: "npm"
 
-      - name: Install and build
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build standalone Next.js
+        run: npm run build
+
+      - name: Prepare standalone package
         run: |
-          npm ci
-          npm run build
+          # Copy static files to standalone folder
+          cp -r .next/static .next/standalone/.next/static
+          cp -r public .next/standalone/public || true
 
-      - name: Zip all files for deployment
-        run: zip -r release.zip . -x "*.git*" -x "*node_modules/.cache/*"
+      - name: Create deployment zip
+        run: |
+          cd .next/standalone
+          zip -r ../../release.zip .
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
